enum ROLES {
    user
    admin
}


Table user {
    id Autofield [pk]
    username CharField [note: 'max_length=150, unique=True']
    email EmailField [note: 'max_length=254']
    first_name CharField [note: 'max_length=150']
    last_name CharField [note: 'max_length=150']
    role SCORES [note: 'Charfield(choices=ROLES']
}

Table tag {
    id Autofield [pk]
    name CharField [note: 'max_length=200']
    color CharField [note: 'max_length=7']
    slug SlugField [note: 'unique=True, max_length=200']
 }

Table ingredient {
    id Autofield [pk]
    name CharField [note: 'max_length=200']
    measurement_unit CharField [note: 'max_length=200']
}

Table recipe {
    id Autofield [pk]
    author ForeignKey [ref: > user.id, note: 'on-delete.CASCADE, related_name=recipes']
    name CharField [note: 'max_length=200']
    text TextField
    cooking_time PositiveSmallIntegerField
    image ImageField
}

Table tag_recipe {
    tag_id ForeignKey [ref: > tag.id, note: 'on-delete:CASCADE, related_name=tag_recipe']
    recipe_id ForeignKey [ref: > recipe.id, note: 'on-delete:CASCADE, related_name=tag_recipe']
}

Table ingredient_recipe {
    ingredient_id ForeignKey [ref: > ingredient.id, note: 'on-delete:CASCADE, related_name=ingredient_recipe']
    recipe_id ForeignKey [ref: > recipe.id, note: 'on-delete:CASCADE, related_name=ingredient_recipe']
    amount PositiveSmallIntegerField
}

Table subscribe {
    user_id ForeignKey [ref: > user.id, note: 'on_delete:CASCADE, related_name=subscriber']
    subscriber_id ForeignKey [ref: > user.id, note: 'on_delete:CASCADE, related_name=subscribing']
}

Table favorite {
    user_id ForeignKey [ref: > user.id, note: 'on_delete:CASCADE, related_name=favorite']
    recipe_id ForeignKey [ref: > recipe.id, note: 'on_delete:CASCADE, related_name=favorite']
}

Table cart {
    user_id ForeignKey [ref: > user.id, note: 'on_delete:CASCADE, related_name=cart']
    recipe_id ForeignKey [ref: > recipe.id, note: 'on_delete:CASCADE, related_name=cart']
}